styles/globals.css
/* ... */
.student-guide {
  border-right: 1px solid #002f90;
  padding-right: 20px;
}

.navbar {
  height: 110px;
  display: flex;
  flex-wrap: wrap;
}

.navbar .logo {
  min-width: 140px;
}

.navbar-item {
  position: relative;
  text-align: center;
}

.navbar-item--dropdown .navbar-sub-menu {
  display: none;
  padding: 0;
  position: absolute;
  left: -1px;
  font-size: 16px;
  font-weight: normal;
}

.navbar-item--dropdown:hover .navbar-sub-menu {
  display: block;
  z-index: 2;
  background: white;
  padding: 10px 10px;
  left: -11px;
}

.navbar-item--dropdown:first-child:hover .navbar-sub-menu {
  /* left: -29px; */
  left: -15px;
  padding: 1rem;
  width: 90px;
}

.navbar-item--dropdown .navbar-sub-menu li:hover {
  text-decoration: underline;
}

.navbar-wrapper {
  display: flex;
  justify-content: space-between;
  max-width: 1200px;
  margin: auto;
  width: 100%;
  height: 100%;
  align-items: center;
}

.navbar-end {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 20px;
  height: 100%;
  flex-wrap: wrap;
}

.navbar-menu {
  display: flex;
  list-style: none;
  color: #002f90;
  font-size: 17px;
  gap: 35px;
  font-weight: bold;
}

.navbar-schedule-button {
  align-self: flex-start;
}

.schedule-button {
  color: white;
  background: #003a7a;
  clip-path: polygon(13% 100%, 0 0, 100% 0, 100% 100%, 60% 100%);
  border-radius: 0 0 0.6rem 2.5rem;
  padding: 0.6rem 2.8rem 0.6rem 3.8rem;
  font-size: 14px;
  height: 44px;
  display: flex;
  justify-content: center;
  align-items: center;
  align-self: flex-start;
}

.navbar-mobile {
  display: none;
}

.footer-address-mobile {
  display: none;
}

@media (max-width: 670px) {
  .navbar .logo {
  }

  .navbar-wrapper {
    flex-direction: column;
    height: 90px;
  }

  .navbar-wrapper .logo {
    display: none;
  }

  .navbar-mobile .logo {
    display: block;
  }

  .navbar-schedule-button {
  }

  .navbar-menu {
    gap: 2%;
  }

  .navbar-end {
    order: 1;
  }

  .navbar-end .navbar-schedule-button {
    display: none;
    justify-content: center;
  }

  .navbar-mobile {
    display: flex;
  }

  .footer {
    flex-direction: column;
  }

  .footer-address {
    display: none;
  }

  .footer-address-mobile {
    display: block;
    margin-top: 2rem;
  }
}
/*/ ////*/

/*/ /////////////////////////     AGENDE SUA VISITA    ////////////////////////*/
.agende-sua-visita .text-content {
  text-align: left;
  max-width: 344px;
}

.agende-sua-visita .title {
  font-size: 35px;
}

.agende-sua-visita .form {
  max-width: 600px;
  display: flex;
  flex-direction: column;
  gap: 20px;
  padding: 10px;
}

.agende-sua-visita .input {
  background: #d7d785;
  border-radius: 5px;
  border: none;
  height: 25px;
  width: 100%;
}

.agende-sua-visita.submit-schedule-button {
  background: yellow;
  border-radius: 6px;
  border: 0;
}
/*/////*/

/*/////*/
/*/ /////////////////////////       PROJETOS          ////////////////////////*/
.projects {
  margin-bottom: calc(3.5vw + 1rem);
}

.projects .project-list {
  display: grid;
  justify-content: center;
  grid: auto/repeat(auto-fit, minmax(min-content, 395px));
  gap: 5px;
  max-width: 1200px;
  margin: auto;
}

.projects-page .title-subtitle, .projects .title-subtitle {
  display: flex;
  gap: 70px;
  align-items: center;
  margin-bottom: 30px;
  flex-wrap: wrap;
  justify-content: center;
  text-align: center;
}

.projects .project-item {
  display: flex;
  border: 2px solid black;
}

/*/////*/

/*/ /////////////////////////       REMATRÍCULA          ////////////////////////*/
.reregistration .reregistration-section {
  max-width: 1200px;
  margin: auto;
  margin-bottom: 1rem;
  padding: 0 2%;
}

.reregistration .reregistration-section {
  margin-bottom: calc(3.5vw + 1rem);
}

.registration .image-title {
  margin-bottom: 40px;
}

.reregistration .title {
  font-weight: bold;
  font-size: 20px;
  margin-bottom: 2.5rem;
}

.reregistration .title--upper {
  text-transform: uppercase;
}

.reregistration .text {
  margin-bottom: 2rem;
}

.reregistration .edital-button {
  background: #ffc253;
  width: fit-content;
  padding: 16px 34px;
  font-weight: 500;
  border-radius: 12px;
}

.reregistration .action {
  display: flex;
  align-items: center;
  margin-top: 2rem;
  justify-content: space-between;
}

.reregistration .action .text {
  margin: 0;
}

.reregistration .texts {
  display: flex;
  flex-direction: column;
}
/*/////*/

/*/ /////////////////////////       PROJETOS          ////////////////////////*/
.project-school-level {
  max-width: 1200px;
  margin: auto;
  margin-bottom: 3rem;
}

.projects-page .project-list {
  display: flex;
  flex-direction: column;
  gap: 7vh;
}

/*/ /////////////////////////     SÓCIO INTERACIONISTA    ////////////////////////*/
.interacionist-partner {
  display: flex;
  justify-content: center;
  width: 100%;
  margin-bottom: calc(3.5vw + 1rem);
}

.interacionist-partner .article {
  display: flex;
  gap: 20px;
  flex-direction: column;
  max-width: 1200px;
  margin: auto;
}

.interacionist-partner .title {
  font-size: 26px;
  font-weight: bold;
  font-style: italic;
}

.interacionist-partner .content {
  gap: 40px;
  display: grid;
  grid: auto/repeat(auto-fit, minmax(min-content, 580px));
  justify-content: center;
  margin-bottom: calc(3.5vw + 1rem);
}

.interacionist-partner .image {
  gap: 30px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.interacionist-partner .highlighted {
  font-size: 35px;
  margin-left: 10px;
  font-style: normal;
}

.interacionist-partner .text {
  flex: 1;
  font-size: 17px;
  font-weight: 500;
}

/*/ /////////////////////////     MATRÍCULAS ABERTAS    ////////////////////////*/
.open-enrollment {
  display: flex;
  justify-content: center;
  margin-bottom: calc(5.5vw + 2rem);
  display: grid;
  justify-content: center;
  grid: auto/repeat(auto-fit, minmax(min-content, 595px));
  gap: 5px;
}
/* ... */

